--- a/config/i3/config
+++ b/config/i3/config
@@ -32,7 +32,8 @@ floating_modifier $mod
 
 # start a terminal
 #bindsym $mod+Return exec i3-sensible-terminal
-bindsym $mod+Return exec terminology
+#bindsym $mod+Return exec terminology
+bindsym $mod+Return exec gnome-terminal
 
 bindsym $mod+F1 exec i3lock -e -c "000000" -p win
 
@@ -199,12 +200,6 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-bindsym $mod+m exec --no-startup-id xrandr --output eDP1 --off
-bindsym $mod+Shift+m exec --no-startup-id xrandr --output eDP1 --auto --left-of DP1-2
-
-bindsym $mod+n exec --no-startup-id xrandr --output DP1-2 --primary --mode 2560x1080 --pos 0x0 --output eDP1 --off
-bindsym $mod+Shift+n exec --no-startup-id xrandr --output eDP1 --primary --auto --pos 0x0 --output DP1-2 --off
-
 bindsym $mod+Control+h move workspace to output left
 bindsym $mod+Control+j move workspace to output down
 bindsym $mod+Control+k move workspace to output up
@@ -224,6 +219,5 @@ bar {
 }
 
 exec --no-startup-id setxkbmap us
-exec --no-startup-id "xrandr --output eDP1 --mode 1920x1080 --pos 2560x0 --rotate normal --output DP1-2 --primary --mode 2560x1080 --pos 0x0 --rotate normal --output HDMI2 --off --output HDMI1 --off --output DP1 --off --output DP1-3 --off --output DP2 --off --output DP1-1 --off"
 exec --no-startup-id feh --bg-max ~/.config/i3/wallpaper.png
 #exec --no-startup-id redshift-gtk -l 41.015137:28.979530 -t 5500:4500
