--- a/config/i3/i3status.conf
+++ b/config/i3/i3status.conf
@@ -7,6 +7,7 @@
 # If the above line is not correctly displayed, fix your editor first!
 
 general {
+	output_format="i3bar"
 	colors = true
 	color_good = "#6FAEDF"
 	color_degraded = "#F2C635"
@@ -14,23 +15,61 @@ general {
 	interval = 1
 }
 
-#order += "ipv6"
-#order += "disk /home"
+order += "disk /home"
 order += "disk /"
-order += "cpu_usage"
-order += "cpu_temperature 0"
-#order += "run_watch DHCP"
-#order += "run_watch VPN"
-#order += "path_exists VPN"
-order += "wireless wlan0"
-#order += "ethernet eth2"
-order += "ethernet eth1"
-order += "ethernet eth0"
-#order += "ethernet eth1"
+order += "wireless wlp2s0"
+order += "ethernet eno1"
 order += "battery 0"
+order += "cpu_temperature 0"
+order += "cpu_usage"
 order += "load"
 order += "tztime local"
 order += "volume master"
+
+disk "/home" {
+	format = "/home: %percentage_used (%used/%total)"
+	low_threshold = 10
+	threshold_type = percentage_free
+}
+
+disk "/" {
+	format = "/: %percentage_used (%used/%total)"
+	low_threshold = 10
+	threshold_type = percentage_free
+}
+
+wireless wlp2s0 {
+	format_up = "W: (%quality at %essid, %bitrate) %ip"
+	format_down = "W: down"
+}
+
+ethernet eno1 {
+	# if you use %speed, i3status requires root privileges
+	format_up = "eno1: %ip (%speed)"
+	format_down = "eno1: down"
+}
+
+battery 0 {
+	format = "%status %percentage %remaining"
+}
+
+cpu_temperature 0 {
+	format = " T: %degrees °C "
+	path = "/sys/class/thermal/thermal_zone0/temp"
+}
+
+cpu_usage {
+	format = " %usage "
+}
+
+load {
+	format = "[ load: %1min, %5min, %15min ]"
+	max_threshold = "4"
+}
+
+tztime local {
+	format = "%Y-%m-%d %H:%M:%S"
+}
 
 volume master {
 	format = "♪: %volume"
@@ -39,66 +78,4 @@ volume master {
 	mixer_idx = 0
 }
 
-
-ethernet eth0 {
-	# if you use %speed, i3status requires root privileges
-	format_up = "eth0: %ip (%speed)"
-	format_down = "eth0: down"
-}
-
-ethernet eth1 {
-	# if you use %speed, i3status requires root privileges
-	format_up = "eth1: %ip (%speed)"
-	format_down = "eth1: down"
-}
-
-ethernet eth2{
-	format_up = "eth2 : %ip (%speed)"
-	format_down = "eth2: down"
-}
-
-wireless wlan0 {
-	format_up = "W: (%quality at %essid, %bitrate) %ip"
-	format_down = "W: down"
-}
-
-battery 0 {
-	format = "%status %percentage %remaining"
-}
-
-run_watch DHCP {
-	pidfile = "/var/run/dhclient*.pid"
-}
-
-path_exists VPN {
-	# path exists when a VPN tunnel launched by nmcli/nm-applet is active 
-	path = "/proc/sys/net/ipv4/conf/ppp0"
-}
-
-tztime local {
-	format = "%Y-%m-%d %H:%M:%S"
-}
-
-load {
-	format = "[ load: %1min, %5min, %15min ]"
-	max_threshold = "4"
-}
-
-disk "/home" {
-	format = "%avail"
-}
-
-disk "/" {
-	format = "%percentage_used %free/%total"
-	low_threshold = 10
-	threshold_type = percentage_free
-}
-
-cpu_usage {
-	format = " %usage "
-}
-
-cpu_temperature 0 {
-	format = " T: %degrees °C "
-	path = "/sys/class/thermal/thermal_zone0/temp"
-}
+# top right corner
