--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -14,6 +14,7 @@
                 create: true
                 force: true
         ~/.gitconfig: git/gitconfig
+        ~/.gitmessage: git/gitmessage
         ~/.vimrc: vimrc
         ~/.zprofile: zprofile
         ~/.zshrc: config/zsh/zshrc
