add config files for swaywm
* swaywm config filed added
* swaywm config paths added to install.conf.yaml

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -9,6 +9,9 @@
         ~/.config/i3:
                 path: config/i3/
                 create: true
+        ~/.config/sway:
+                path: config/sway/
+                create: true
         ~/.config/zsh:
                 path: config/zsh
                 create: true
