update i3status format

--- a/config/i3/i3status.conf
+++ b/config/i3/i3status.conf
@@ -45,8 +45,8 @@ wireless wlp2s0 {
 
 ethernet eno1 {
 	# if you use %speed, i3status requires root privileges
-	format_up = "eno1: %ip (%speed)"
-	format_down = "eno1: down"
+	format_up = "E: %ip (%speed)"
+	format_down = "E: down"
 }
 
 battery 0 {
