--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -22,8 +22,9 @@
         ~/.config/nvim:
                 path: config/nvim
                 create: true
-        ~/.gitconfig: git/gitconfig
-        ~/.gitmessage: git/gitmessage
-        ~/.vimrc: vimrc
-        ~/.zprofile: zprofile
+        ~/.clang-format: config/clang-format/clang-format
+        ~/.gitconfig: config/git/gitconfig
+        ~/.gitmessage: config/git/gitmessage
+        ~/.vimrc: config/vimrc
+        ~/.zprofile: config/zprofile
         ~/.zshrc: config/zsh/zshrc
