add ability to install user scripts and vimscope scipt
user scripts will be installed into $HOME/.local/bin directory.
$HOME/.local/bin directory will be created if not exists.

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -22,6 +22,9 @@
         ~/.config/nvim:
                 path: config/nvim
                 create: true
+        ~/.local/bin:
+                path: bin
+                create: true
         ~/.clang-format: config/clang-format/clang-format
         ~/.gitconfig: config/git/gitconfig
         ~/.gitmessage: config/git/gitmessage
