move $HOME/.local/bin to $HOME/.local/sbin
$HOME/.local/bin might be used for some manually installed libraries or
tools, so install scripts from dotfiles repo into $HOME/.local/sbin and
add new path to PATH environment variable to prevent conflicts.

also install cscope since vimscope script depends on it.

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -22,8 +22,8 @@
         ~/.config/nvim:
                 path: config/nvim
                 create: true
-        ~/.local/bin:
-                path: bin
+        ~/.local/sbin:
+                path: sbin
                 create: true
         ~/.clang-format: config/clang-format/clang-format
         ~/.gitconfig: config/git/gitconfig
