--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -10,6 +10,9 @@
         ~/.config/i3:
                 path: config/i3/
                 create: true
+        ~/.config/mpv:
+                path: config/mpv
+                create: true
         ~/.config/nvim:
                 path: config/nvim
                 create: true
