git: add git-lfs stuff

--- a/config/git/config
+++ b/config/git/config
@@ -44,3 +44,8 @@
 [include]
 	path = ~/.local/config/git/sendemail
 	path = ~/.local/config/git/localconfig
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
