config: add glow to install list
glow is a terminal markdown viewer/renderer

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -12,6 +12,7 @@
                   clang cscope ctags curl
                   fzf
                   git
+                  glow
                   neovim
                   python-pynvim
                   ripgrep
