meta: add swaylock config

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -90,6 +90,9 @@
         ~/.config/sway:
                 path: config/sway/
                 create: true
+        ~/.config/swaylock:
+                path: config/swaylock/
+                create: true
         ~/.config/waybar:
                 path: config/waybar/
                 create: true
