--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -16,6 +16,7 @@
                   dmenu
                   foot
                   fzf
+                  gammastep
                   git
                   glow
                   kitty
