--- a/config/sway/config
+++ b/config/sway/config
@@ -137,13 +137,16 @@ bindsym XF86AudioPause exec playerctl pause
 bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
 
-#bindsym Print exec scrot ~/Pictures/%Y-%m-%d_%H:%M:%S.png
-#bindsym Control+Print exec scrot -bu ~/Pictures/%Y-%m-%d_%H:%M:%S.png
-#bindsym Shift+Print exec scrot -bs ~/Pictures/%Y-%m-%d_%H:%M:%S.png
+set $grim grim -t png
 
-bindsym --release Print exec --no-startup-id gnome-screenshot
-bindsym --release Shift+Print exec --no-startup-id gnome-screenshot -ab
-bindsym --release Control+Print exec --no-startup-id gnome-screenshot -wb
+# take screenshot of all outputs
+bindsym --release Print exec --no-startup-id $grim
+
+# take screenshot of focused window
+bindsym --release Control+Print --no-startup-id exec $grim -g "$(swaymsg -t get_tree | jq -j '.. | select(.type?) | select(.focused).rect | "\(.x),\(.y) \(.width)x\(.height)"')"
+
+# take screenshot of focused output
+bindsym --release Shift+Print exec --no-startup-id $grim -o $(swaymsg -t get_outputs | jq -r '.[] | select(.focused) | .name')
 
 bindsym $mod+Shift+a exec --no-startup-id "setxkbmap tr"
 bindsym $mod+Shift+s exec --no-startup-id "setxkbmap us"
