config/kitty: change window split shortcuts
previous shortcuts were conflicted with vim's visual selection shortcuts

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -2023,9 +2023,9 @@ linux_display_server wayland
 
 #: Custom Shortcuts {{{
 
-map ctrl+h launch --location=hsplit
-map ctrl+v launch --location=vsplit
-map ctrl+r layout_action rotate
+map ctrl+alt+h launch --location=hsplit
+map ctrl+alt+v launch --location=vsplit
+map ctrl+alt+r layout_action rotate
 map shift+up move_window up
 map shift+left move_window left
 map shift+right move_window right
