--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -2030,10 +2030,10 @@ map shift+up move_window up
 map shift+left move_window left
 map shift+right move_window right
 map shift+down move_window down
-map ctrl+left neighboring_window left
-map ctrl+right neighboring_window right
-map ctrl+up neighboring_window up
-map ctrl+down neighboring_window down
+map alt+left neighboring_window left
+map alt+right neighboring_window right
+map alt+up neighboring_window up
+map alt+down neighboring_window down
 
 #: }}}
 #
