meta: add ~/.config/environment.d files

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -80,6 +80,9 @@
           stdout: true
           stderr: true
 - link:
+        ~/.config/environment.d:
+                path: config/environment.d/
+                create: true
         ~/.clang-format: config/clang-format/clang-format
         ~/.config/kitty:
                 path: config/kitty/
