config/environment.d: update 99-wayland.conf

--- a/config/environment.d/99-wayland.conf
+++ b/config/environment.d/99-wayland.conf
@@ -1,4 +1,5 @@
 MOZ_ENABLE_WAYLAND='1'
 QT_QPA_PLATFORM='wayland'
+QT_QPA_PLATFORMTHEME='qt6ct'
 QT_WAYLAND_DISABLE_WINDOWDECORATION='1'
 CLUTTER_BACKEND='wayland'
