sway: remove --no-startup-id since swaywm ignores it

--- a/config/sway/config
+++ b/config/sway/config
@@ -101,9 +101,9 @@ bindsym $mod+Shift+9 move container to workspace 9
 bindsym $mod+Shift+0 move container to workspace 10
 
 # Audio controls
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
+bindsym XF86AudioRaiseVolume exec pactl set-sink-volume 0 +5% #increase sound volume
+bindsym XF86AudioLowerVolume exec pactl set-sink-volume 0 -5% #decrease sound volume
+bindsym XF86AudioMute exec pactl set-sink-mute 0 toggle # mute sound
 
 # Sreen brightness controls
 
@@ -122,27 +122,27 @@ bindsym XF86AudioPrev exec playerctl previous
 set $grim grim -t png
 
 # take screenshot of all outputs
-bindsym --release Print exec --no-startup-id $grim
+bindsym --release Print exec $grim
 
 # take screenshot of focused window
-bindsym --release Control+Print --no-startup-id exec $grim -g "$(swaymsg -t get_tree | jq -j '.. | select(.type?) | select(.focused).rect | "\(.x),\(.y) \(.width)x\(.height)"')"
+bindsym --release Control+Print exec $grim -g "$(swaymsg -t get_tree | jq -j '.. | select(.type?) | select(.focused).rect | "\(.x),\(.y) \(.width)x\(.height)"')"
 
 # take screenshot of focused output
-bindsym --release Shift+Print exec --no-startup-id $grim -o $(swaymsg -t get_outputs | jq -r '.[] | select(.focused) | .name')
+bindsym --release Shift+Print exec $grim -o $(swaymsg -t get_outputs | jq -r '.[] | select(.focused) | .name')
 
-bindsym $mod+Shift+a exec --no-startup-id "setxkbmap tr"
-bindsym $mod+Shift+s exec --no-startup-id "setxkbmap us"
+bindsym $mod+Shift+a exec "setxkbmap tr"
+bindsym $mod+Shift+s exec "setxkbmap us"
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
 
 set $sysmenu "[L]ock l[O]gout [P]oweroff [R]eboot [S]uspend"
 mode $sysmenu {
-	bindsym $mod+l exec --no-startup-id $lock, mode "default"
+	bindsym $mod+l exec $lock, mode "default"
 	bindsym $mod+o exit, mode "default"
-	bindsym $mod+p exec --no-startup-id systemctl poweroff, mode "default"
-	bindsym $mod+r exec --no-startup-id systemctl reboot, mode "deafult"
-	bindsym $mod+s exec --no-startup-id systemctl suspend, mode "default"
+	bindsym $mod+p exec systemctl poweroff, mode "default"
+	bindsym $mod+r exec systemctl reboot, mode "deafult"
+	bindsym $mod+s exec systemctl suspend, mode "default"
 	bindsym Escape mode "default"
 	bindsym Return mode "default"
 }
@@ -208,10 +208,10 @@ default_border none
 default_floating_border none
 
 # Start gammastep
-exec --no-startup-id gammastep -m wayland -l 41.0082:28.9784
+exec gammastep -m wayland -l 41.0082:28.9784
 
 # start some helper apps
-exec --no-startup-id mako
+exec mako
 
 # setup keybonds to dismiss mako notifications
 # TODO: find better keybinds
