sway: use brightnessctl for controling screen brightness

--- a/config/sway/config
+++ b/config/sway/config
@@ -113,19 +113,16 @@ bindsym XF86AudioLowerVolume exec pactl set-sink-volume 0 -5% #decrease sound vo
 bindsym XF86AudioMute exec pactl set-sink-mute 0 toggle # mute sound
 
 # Sreen brightness controls
+bindsym --locked XF86MonBrightnessDown exec brightnessctl set 5%-
+bindsym --locked XF86MonBrightnessUp exec brightnessctl set 5%+
 
-bindsym $mod+F5 exec xbacklight -dec 10
-bindsym $mod+F6 exec xbacklight -inc 10
-
-# # Touchpad controls
-# bindsym XF86TouchpadToggle exec /some/path/toggletouchpad.sh # toggle touchpad
-
-# # Media player controls
+# Media player controls
 bindsym XF86AudioPlay exec playerctl play
 bindsym XF86AudioPause exec playerctl pause
 bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
 
+# set base command for grim
 set $grim grim -t png
 
 # take screenshot of all outputs
