--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -9,6 +9,7 @@
         -
           command: >
                   sudo pacman -S --needed
+                  brightnessctl
                   clang
                   cscope
                   ctags
