--- a/config/environment.d/99-wayland.conf
+++ b/config/environment.d/99-wayland.conf
@@ -1,5 +1,5 @@
 XDG_SESSION_TYPE='wayland'
-XDG_CURRENT_DESKTOP='sway'
+XDG_CURRENT_DESKTOP="${XDG_CURRENT_DESKTOP:-sway}"
 MOZ_ENABLE_WAYLAND='1'
 QT_QPA_PLATFORM='wayland'
 QT_QPA_PLATFORMTHEME='qt6ct'
