--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -22,6 +22,7 @@
                   glow
                   grim
                   jq
+                  kdeconnect
                   kitty
                   mako
                   neovim
