setup: add nm-connection-editor to install list

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -33,6 +33,7 @@
                   kitty
                   mako
                   neovim
+                  nm-connection-editor
                   otf-font-awesome
                   pamixer
                   playerctl
