--- a/config/sway/config
+++ b/config/sway/config
@@ -180,6 +180,13 @@ bindsym $mod+Control+Down move workspace to output down
 bindsym $mod+Control+Up move workspace to output up
 bindsym $mod+Control+Right move workspace to output right
 
+# passthrough mode to allow using $mod in any window's shortcuts.
+# useful for things like VNC
+mode "passthrough" {
+	bindsym $mod+Pause mode default
+}
+bindsym $mod+Pause mode "passthrough"
+
 #
 # Scratchpad:
 #
