setup: install basic utilities for bluetooth support

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -9,6 +9,8 @@
         -
           command: >
                   sudo pacman -S --needed
+                  bluez
+                  bluez-utils
                   brasero
                   brightnessctl
                   clang
