sway: prevent firefox from stealing workspace when screen sharing is active

--- a/config/sway/config
+++ b/config/sway/config
@@ -226,6 +226,9 @@ default_floating_border none
 # use default border settings for kitty.
 for_window [app_id="kitty"] border normal 2
 
+# prevent firefox from stealing workspace for "sharing indicator" window
+for_window [app_id="firefox" title="Firefox — Sharing Indicator"] kill
+
 # inhibit idle when firefox is fullscreen
 for_window [app_id="firefox"] inhibit_idle fullscreen
 
