--- a/config/sway/config
+++ b/config/sway/config
@@ -229,8 +229,9 @@ for_window [app_id="kitty"] border normal 2
 # prevent firefox from stealing workspace for "sharing indicator" window
 for_window [app_id="firefox" title="Firefox — Sharing Indicator"] kill
 
-# inhibit idle when firefox is fullscreen
-for_window [app_id="firefox"] inhibit_idle fullscreen
+# inhibit idle when an application is fullscreen
+for_window [class="^.*"] inhibit_idle fullscreen
+for_window [app_id="^.*"] inhibit_idle fullscreen
 
 # export Wayland display info for gtk applications
 # https://github.com/swaywm/sway/wiki#gtk-applications-take-20-seconds-to-start
